
- VFSManager.canReadFile() was returning true only for directories
  (#4102 - Matthieu Casanova)

- Allow user to choose filename when printing to pdf
  (partial fix for #4115 - Dale Anson)

- Key handling in the Errors dialog uses current keymap (#4128 - Eric Le Lay)

- Delete at the end of the line does not delete newline on java20, java21
  (#4125 - Eric Le Lay)

}}}
{{{ Miscellaneous

- Update macOS app bundler to version 1.2.0 (Björn Kautler)

- Status bar design updated with the ability to add widgets to the left
  and the right of the bar (Matthieu Casanova)

- Make building possible when using Java 15+ (Björn Kautler)

}}}
{{{ API Changes

- Added new methods in SegmentBuffer for append and insert text
  (Matthieu Casanova)

- New service org.jedit.util.CleanerService replacing use of finalize()
  (Matthieu Casanova)

- New methods JEditBuffer.getWordWrap() and JeditBuffer.setWordWrap()
  (Matthieu Casanova)

- New method DialogChooser.openChooserWindow() showing a chooser dialog
  (Matthieu Casanova)

- New method DialogChooser.openListChooserWindow() showing a chooser dialog list
  (Matthieu Casanova)

- New method Buffer.setLineSeparator() (Matthieu Casanova)

- New method Buffer.reloadWithEncoding() (Matthieu Casanova)

- New method StatusBar.updateEvent() (Matthieu Casanova)

- New method BufferSet.contains() (Matthieu Casanova)

- Deprecated methods removed
    StandardUtilities.objectsEqual()
    TextArea.showPopupMenu()
    Mode.acceptFilename()
    OperatingSystem.isDOSDerived()
    OperatingSystem.hasJava17()
    MiscUtilities.getFileNameNoExtension()
    GUIUtilities.prettifyMenuLabel()
    GUIUtilities.setAutoMnemonic()
    GUIUtilities.parseColor()
    GUIUtilities.parseStyle()
    GUIUtilities.adjustForScreenBounds()
    GUIUtilities.requestFocus()
    GUIUtilities.isPopupTrigger()
    GUIUtilities.isMiddleButton()
    GUIUtilities.isRightButton()
    GUIUtilities.getScreenBounds()
    GUIUtilities.showPopupMenu()