@@ -562,14 +562,14 @@
 				<unjar src="${lib.dir}/launch4j/launch4j-workdir-win32.jar"
 				       dest="${build.dir}/launch4j"/>
 				<copy todir="${lib.dir}/launch4j">
-					<fileset dir="${build.dir}/launch4j/launch4j-3.12-workdir-win32/"/>
+					<fileset dir="${build.dir}/launch4j/launch4j-3.50-workdir-win32/"/>
 				</copy>
 			</contrib:case>
 			<contrib:case value="unix-x64">
 				<unjar src="${lib.dir}/launch4j/launch4j-workdir-linux64.jar"
 				       dest="${build.dir}/launch4j/"/>
 				<copy todir="${lib.dir}/launch4j">
-					<fileset dir="${build.dir}/launch4j/launch4j-3.12-workdir-linux64/"/>
+					<fileset dir="${build.dir}/launch4j/launch4j-3.50-workdir-linux64/"/>
 				</copy>
 				<chmod dir="${lib.dir}/launch4j/bin"
 				       perm="+x"
@@ -579,7 +579,7 @@
 				<unjar src="${lib.dir}/launch4j/launch4j-workdir-linux.jar"
 				       dest="${build.dir}/launch4j/"/>
 				<copy todir="${lib.dir}/launch4j">
-					<fileset dir="${build.dir}/launch4j/launch4j-3.12-workdir-linux/"/>
+					<fileset dir="${build.dir}/launch4j/launch4j-3.50-workdir-linux/"/>
 				</copy>
 				<chmod dir="${lib.dir}/launch4j/bin"
 				       perm="+x"
@@ -589,7 +589,7 @@
 				<unjar src="${lib.dir}/launch4j/launch4j-workdir-mac.jar"
 				       dest="${build.dir}/launch4j/"/>
 				<copy todir="${lib.dir}/launch4j">
-					<fileset dir="${build.dir}/launch4j/launch4j-3.12-workdir-mac/"/>
+					<fileset dir="${build.dir}/launch4j/launch4j-3.50-workdir-mac/"/>
 				</copy>
 				<chmod dir="${lib.dir}/launch4j/bin"
 				       perm="+x"
